finished youngs and veers tasks

--- a/views/selectPlayers.hbs
+++ b/views/selectPlayers.hbs
@@ -1,5 +1,9 @@
 <form method="POST" action="/compare">
     <div>
+       <em>
+           Select Players to Compare!
+       </em> 
+        <br> </br>
         <span>Player 1</span>
         {{!-- name in select is the body field name --}}
         <select name="player1">
