--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,17 @@ body {
 a {
   color: #00B7FF;
 }
+
+.comparison {
+  border: 1px solid black;
+  margin: 10px;
+  padding: 30px;
+}
+
+.playerselection {
+  padding: 10px;
+}
+
+.submitbutton {
+  padding-left: 50px;
+}
