--- a/views/selectPlayers.hbs
+++ b/views/selectPlayers.hbs
@@ -1,5 +1,7 @@
+<h1> Add a comparison: </h1>
+
 <form method="POST" action="/compare">
-    <div>
+    <div class="playerselection">
         <span>Player 1</span>
         {{!-- name in select is the body field name --}}
         <select name="player1">
@@ -9,7 +11,7 @@
             {{/each}}
         </select>
     </div>
-    <div>
+    <div class="playerselection">
         <span>Player 2</span>
         <select name="player2">
             <option>Select player 2</option>
@@ -18,7 +20,7 @@
             {{/each}}
         </select>
     </div>
-    <div>
+    <div class="submitbutton">
         <button>Submit</button>
     </div>
 </form>
