--- a/views/deleteFavorites.hbs
+++ b/views/deleteFavorites.hbs
@@ -1,3 +1,5 @@
+<h1> Remove a player from your favorite players list </h1>
+
 <form method="POST" action="/deleteFavorites">
     <div>
         <span>Player</span>
