--- a/views/selectTeams.hbs
+++ b/views/selectTeams.hbs
@@ -1,3 +1,15 @@
+<a href="/">
+    <button class="btn btn-primary btn-lg">Select Players</button>
+ </a>
+ <a href="/viewcomparisons">
+    <button class="btn btn-primary btn-lg">View Comparisons</button>
+ </a>
+ <a href="/viewFavorites">
+    <button class="btn btn-primary btn-lg">Select Favorites</button>
+ </a>
+ <a href="/viewFavoritesToDelete">
+    <button class="btn btn-primary btn-lg">Delete Favorites</button>
+ </a>
 <div>
     <span>Team 1</span>
     <select>
