--- a/views/viewFavorites.hbs
+++ b/views/viewFavorites.hbs
@@ -1,3 +1,15 @@
+<a href="/">
+    <button class="btn btn-primary btn-lg">Select Players</button>
+ </a>
+ <a href="/viewcomparisons">
+    <button class="btn btn-primary btn-lg">View Comparisons</button>
+ </a>
+ <a href="/viewFavorites">
+    <button class="btn btn-primary btn-lg">Select Favorites</button>
+ </a>
+ <a href="/viewFavoritesToDelete">
+    <button class="btn btn-primary btn-lg">Delete Favorites</button>
+ </a>
 {{#each favorites}}
   <div class="viewFavorites">
     <h1>Favorite Player {{@index}}</h1>
