--- a/views/deleteFavorites.hbs
+++ b/views/deleteFavorites.hbs
@@ -2,7 +2,7 @@
     <button class="btn btn-primary btn-lg">Select Players</button>
  </a>
  <a href="/viewcomparisons">
-    <button class="btn btn-primary btn-lg">View Comparisons</button>
+    <button class="btn btn-primary btn-lg">View Player Comparisons</button>
  </a>
  <a href="/viewFavorites">
     <button class="btn btn-primary btn-lg">Select Favorites</button>
@@ -10,6 +10,11 @@
  <a href="/viewFavoritesToDelete">
     <button class="btn btn-primary btn-lg">Delete Favorites</button>
  </a>
+
+ <a href="/viewTeamComparisons">
+    <button class="btn btn-primary btn-lg">View Team Comparisons</button>
+ </a>
+
 
 <h1> Remove a player from your favorite players list </h1>
 <form method="POST" action="/deleteFavorites">
