--- a/views/viewTeams.hbs
+++ b/views/viewTeams.hbs
@@ -1,3 +1,20 @@
+<a href="/">
+    <button class="btn btn-primary btn-lg">Select Players</button>
+ </a>
+ <a href="/viewcomparisons">
+    <button class="btn btn-primary btn-lg">View Player Comparisons</button>
+ </a>
+ <a href="/viewFavorites">
+    <button class="btn btn-primary btn-lg">Select Favorites</button>
+ </a>
+ <a href="/viewFavoritesToDelete">
+    <button class="btn btn-primary btn-lg">Delete Favorites</button>
+ </a>
+
+ <a href="/viewTeamComparisons">
+    <button class="btn btn-primary btn-lg">View Team Comparisons</button>
+ </a>
+
 {{#each teams}}
   <div class="comparison">
     <h1>Comparison {{@index}}</h1>
