--- a/views/selectPlayers.hbs
+++ b/views/selectPlayers.hbs
@@ -2,7 +2,7 @@
     <button class="btn btn-primary btn-lg">Select Players</button>
  </a>
  <a href="/viewcomparisons">
-    <button class="btn btn-primary btn-lg">View Comparisons</button>
+    <button class="btn btn-primary btn-lg">View Player Comparisons</button>
  </a>
  <a href="/viewFavorites">
     <button class="btn btn-primary btn-lg">Select Favorites</button>
@@ -10,6 +10,12 @@
  <a href="/viewFavoritesToDelete">
     <button class="btn btn-primary btn-lg">Delete Favorites</button>
  </a>
+
+ <a href="/viewTeamComparisons">
+    <button class="btn btn-primary btn-lg">View Team Comparisons</button>
+ </a>
+
+
 <h1> Add a comparison: </h1>
 
 
