--- a/views/favPlayerComparisons.hbs
+++ b/views/favPlayerComparisons.hbs
@@ -15,28 +15,13 @@
   <button class="btn btn-primary btn-lg">View Team Comparisons</button>
 </a>
 
-<form method="POST" action="/favPlayerComparisons">
-  <div>
-    <span><em>Select your favorite player's comparisons:</em></span>
-    <select name="favPlayer">
-      <option>Select Favorite Player</option>
-      {{#each players}}
-        <option>{{this.first_name}} {{this.last_name}}</option>
-      {{/each}}
-    </select>
-  </div>
-  <div class="submitbutton">
-    <button>Submit</button>
-  </div>
-</form>
-
 {{#each comparisons}}
   <div class="comparison">
     <h1>Comparison {{@index}}</h1>
-    <h2>{{this.p1first_name}} {{this.p1last_name}}</h2>
-    <p>{{this.p1points}} average points</p>
-    <h2>{{this.p2first_name}} {{this.p2last_name}}</h2>
-    <p>{{this.p2points}} average points</p>
+    <h2>{{this.p1_first_name}} {{this.p1_last_name}}</h2>
+    <p>{{this.player1_points}} average points</p>
+    <h2>{{this.p2_first_name}} {{this.p2_last_name}}</h2>
+    <p>{{this.player2_points}} average points</p>
 
     <h2>Winner: {{this.winner}}</h2>
   </div>
