--- a/views/selectPlayers.hbs
+++ b/views/selectPlayers.hbs
@@ -77,3 +77,24 @@
         <button>Submit</button>
     </div>
 </form>
+
+<h2>Player Stats For 2021 Season</h2>
+<form method="POST" action="/selectPlayer">
+    <div>
+        <em>
+            Select Players and see their stats!!!
+        </em> 
+        <br> </br>
+        <span>Player 1</span>
+        {{!-- name in select is the body field name --}}
+        <select name="player">
+            <option>Select player</option>
+            {{#each players}}
+            <option>{{this.first_name}} {{this.last_name}}</option>
+            {{/each}}
+        </select>
+    </div>
+    <div>
+        <button>Submit</button>
+    </div>   
+</form>
