fixing odds and ends

--- a/views/comparePlayers.hbs
+++ b/views/comparePlayers.hbs
@@ -1,18 +1,20 @@
 <a href="/">
-    <button class="btn btn-primary btn-lg">Select Players</button>
+    <button class="btn btn-primary btn-lg">Compare Players/Teams and view player stats</button>
  </a>
  <a href="/viewcomparisons">
     <button class="btn btn-primary btn-lg">View Player Comparisons</button>
  </a>
- <a href="/viewFavorites">
+ <a href="/viewTeamComparisons">
+    <button class="btn btn-primary btn-lg">View Team Comparisons</button>
+ </a>
+  <a href="/selectFavorites">
     <button class="btn btn-primary btn-lg">Select Favorites</button>
+ </a>
+ <a href="/viewFavorites">
+    <button class="btn btn-primary btn-lg">View Favorites</button>
  </a>
  <a href="/viewFavoritesToDelete">
     <button class="btn btn-primary btn-lg">Delete Favorites</button>
- </a>
-
- <a href="/viewTeamComparisons">
-    <button class="btn btn-primary btn-lg">View Team Comparisons</button>
  </a>
 
 <div>
