--- a/views/favPlayerComparisons.hbs
+++ b/views/favPlayerComparisons.hbs
@@ -1,19 +1,21 @@
 <a href="/">
-  <button class="btn btn-primary btn-lg">Select Players</button>
-</a>
-<a href="/viewcomparisons">
-  <button class="btn btn-primary btn-lg">View Player Comparisons</button>
-</a>
-<a href="/viewFavorites">
-  <button class="btn btn-primary btn-lg">Select Favorites</button>
-</a>
-<a href="/viewFavoritesToDelete">
-  <button class="btn btn-primary btn-lg">Delete Favorites</button>
-</a>
-
-<a href="/viewTeamComparisons">
-  <button class="btn btn-primary btn-lg">View Team Comparisons</button>
-</a>
+    <button class="btn btn-primary btn-lg">Compare Players/Teams and view player stats</button>
+ </a>
+ <a href="/viewcomparisons">
+    <button class="btn btn-primary btn-lg">View Player Comparisons</button>
+ </a>
+ <a href="/viewTeamComparisons">
+    <button class="btn btn-primary btn-lg">View Team Comparisons</button>
+ </a>
+  <a href="/selectFavorites">
+    <button class="btn btn-primary btn-lg">Select Favorites</button>
+ </a>
+ <a href="/viewFavorites">
+    <button class="btn btn-primary btn-lg">View Favorites</button>
+ </a>
+ <a href="/viewFavoritesToDelete">
+    <button class="btn btn-primary btn-lg">Delete Favorites</button>
+ </a>
 
 {{!-- {{#each comparisons}}
   <div class="comparison">
