--- a/views/viewFavorites.hbs
+++ b/views/viewFavorites.hbs
@@ -1,24 +1,26 @@
 <a href="/">
-    <button class="btn btn-primary btn-lg">Select Players</button>
+    <button class="btn btn-primary btn-lg">Compare Players/Teams and view player stats</button>
  </a>
  <a href="/viewcomparisons">
     <button class="btn btn-primary btn-lg">View Player Comparisons</button>
  </a>
- <a href="/viewFavorites">
+ <a href="/viewTeamComparisons">
+    <button class="btn btn-primary btn-lg">View Team Comparisons</button>
+ </a>
+  <a href="/selectFavorites">
     <button class="btn btn-primary btn-lg">Select Favorites</button>
+ </a>
+ <a href="/viewFavorites">
+    <button class="btn btn-primary btn-lg">View Favorites</button>
  </a>
  <a href="/viewFavoritesToDelete">
     <button class="btn btn-primary btn-lg">Delete Favorites</button>
  </a>
 
- <a href="/viewTeamComparisons">
-    <button class="btn btn-primary btn-lg">View Team Comparisons</button>
- </a>
-
 
 {{#each favorites}}
-  <div class="viewFavorites">
+  <div class="comparison">
     <h1>Favorite Player {{@index}}</h1>
-    <h2>{{this.p1first_name}} {{this.p1last_name}}</h2>
+    <h2>{{this.first_name}} {{this.last_name}}</h2>
   </div>
 {{/each}}
